# cartesian_product

./: CMakeLists.txt  LICENSE  README.md  README.rst  config.cmake.in  default.nix  shell.nix
include/direct_product/: iterator.hpp  range.hpp
include/dirprod/: iterator.hpp  range.hpp
test/: CMakeLists.txt  direct_product_test.cpp
tests/: CMakeLists.txt  direct_product_test.cpp  dirprod.cpp
